fixed scaling on mobile

--- a/AboutMe/about.css
+++ b/AboutMe/about.css
@@ -106,16 +106,18 @@ li{
 }
 @media screen and (max-width: 1100px) {
     .Main-Para{
+        position: fixed;
         transform: scale(.6);
-        left: 3%;
+        left: 0%;
         
     }
     #skills-button{
         visibility: hidden;
     }
     .Skills{
+        position: fixed;
         transform: scale(.6);
-        left: 3%;
+        left: 0%;
         visibility: visible;
     }
   }
