--- a/project/projects.css
+++ b/project/projects.css
@@ -129,7 +129,7 @@ body {
         transform: scale(.5);
     }
     .ProjCard:hover{
-        transform:scale(.70)
+        transform:scale(.5)
     }
     #card1{ 
         left:40%;
