--- a/style.css
+++ b/style.css
@@ -177,10 +177,11 @@ body{
 #hid-cont{
     position: fixed;
     left:10%;
+    visibility: hidden;
 }
 #hid-proj{
     position: relative;
-    
+    visibility: hidden;
 }
 
 .button:hover,
@@ -211,11 +212,17 @@ body{
         left: 20%;
     }
     .card:hover{
-        transform: none;
+        transform: scale(0.6);;
     }
     #Projects {
         position: fixed;
         visibility: hidden;
+    }
+    #hid-proj{
+        visibility: visible;
+    }
+    #hid-cont{
+        visibility: visible;
     }
     body{
         background-size: cover;
